--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "squashladder",
   "version": "0.0.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
     "start": "node ./bin/www",
     "devstart": "nodemon ./bin/www",
@@ -11,6 +12,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.0",
