--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "serverstart": "DEBUG=locallibrary:* npm run devstart"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "firebase": "^10.10.0",
     "firebase-admin": "^12.0.0",
     "http-errors": "~1.6.3",
